<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translate="false">iPoca</string>
    <string name="phone_code" translatable="false">+%s</string>
    <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="no_result_found">No result found</string>
    <string name="select_country">Select county</string>
    <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
    <string name="country_full_name_and_phone_code">%1$s +%2$s</string>
    <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
    <string name="confirm_exit_app">Tap back again to exit iPoca</string>
    <string name="arts">Arts</string>
    <string name="comedy">Comedy</string>
    <string name="education">Education</string>
    <string name="kids"><![CDATA[Kids & Family]]></string>
    <string name="health">Health</string>
    <string name="tv"><![CDATA[TV & Film]]></string>
    <string name="music">Music</string>
    <string name="news"><![CDATA[News & Politics]]></string>
    <string name="region"><![CDATA[Religion & Spirituality]]></string>
    <string name="science"><![CDATA[Science & Medicine]]></string>
    <string name="sports"><![CDATA[Sports & Recreation]]></string>
    <string name="tech">Technology</string>
    <string name="business">Business</string>
    <string name="game"><![CDATA[Games & Hobbies]]></string>
    <string name="culture"><![CDATA[Society & Culture]]></string>
    <string name="gov"><![CDATA[Government & Organizations]]></string>
    <string name="search_options">Search option</string>
    <string name="pref_set_locale">Select default locale</string>
    <string name="pref_set_locale_desc">Select locale for itunes podcast</string>
    <string name="pref_set_genre">Select default genre</string>
    <string name="pref_set_genre_desc">Select genre for itunes podcast</string>
    <string name="us">us</string>
    <string name="genre_label">Select genre</string>
    <string name="color_label">Select theme color</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="custom">Custom</string>
    <string name="presets">Presets</string>
</resources>
