<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reselect_item"
        android:icon="?attr/ic_filter"
        android:menuCategory="container"
        android:title="@string/genre_label"
        custom:showAsAction="always">

        <menu>
            <item
                android:id="@+id/arts"
                android:title="@string/arts"/>
            <item
                android:id="@+id/game"
                android:title="@string/game"/>
            <item
                android:id="@+id/culture"
                android:title="@string/culture"/>
            <item
                android:id="@+id/business"
                android:title="@string/business"/>
            <item
                android:id="@+id/tv"
                android:title="@string/tv"/>
            <item
                android:id="@+id/music"
                android:title="@string/music"/>
            <item
                android:id="@+id/news"
                android:title="@string/news"/>
            <item
                android:id="@+id/tech"
                android:title="@string/tech"/>
            <item
                android:id="@+id/comedy"
                android:title="@string/comedy"/>
            <item
                android:id="@+id/education"
                android:title="@string/education"/>
            <item
                android:id="@+id/science"
                android:title="@string/science"/>
            <item
                android:id="@+id/sports"
                android:title="@string/sports"/>
            <item
                android:id="@+id/kids"
                android:title="@string/kids"/>
            <item
                android:id="@+id/health"
                android:title="@string/health"/>
            <item
                android:id="@+id/gov"
                android:title="@string/gov"/>

        </menu>
    </item>


</menu>
